Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15038

mgc_fs_setup() can leak cl_mgc_mutex reference

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      It is possible for mgc_fs_setup() to leak a reference to cl_mgc_mutex if local_oid_storage_init() fails:

              /* The mgc fs exclusion mutex. Only one fs can be setup at a time. */
              mutex_lock(&cli->cl_mgc_mutex); 
              
              /* Setup the configs dir */
              fid.f_seq = FID_SEQ_LOCAL_NAME;
              fid.f_oid = 1;
              fid.f_ver = 0;
              rc = local_oid_storage_init(env, lsi->lsi_dt_dev, &fid,
                                          &cli->cl_mgc_los);
              if (rc)
                      RETURN(rc);
      

            adilger Andreas Dilger
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: